# swinydl

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO-macos-apple-silicon-modernization.md  app.py  install.sh  pyproject.toml  run.sh  swinydl.py
.github/workflows/: build.yaml  release-dmg.yaml
docs/: _config.yml  index.md  release-install.md  user-guide.md
safari/: project.yml
safari/.build/DerivedData/: info.plist
safari/SWinyDLSafari.xcodeproj/: project.pbxproj
safari/SWinyDLSafariApp/: Info.plist  SWinyDLSafariApp.entitlements
safari/SWinyDLSafariApp/Sources/: JobStore.swift  SWinyDLSafariApp.swift  UpdateController.swift
safari/SWinyDLSafariExtension/: Info.plist  SWinyDLSafariExtension.entitlements
scripts/: build_app.sh  package_release.sh
swift/ParakeetCoreMLRunner/: Package.resolved  Package.swift
swinydl/: __init__.py  app_paths.py  auth.py  bootstrap.py  captions.py  discovery.py  echo_exceptions.py  health.py  main.py  manifest.py  media.py  models.py  system.py  transcription.py  utils.py  version.py  workflow.py
tests/: test_app_entrypoint.py  test_app_paths.py  test_bootstrap.py  test_cli.py  test_diarization_quality.py  test_discovery.py  test_docs.py  test_e2e_local_media.py  test_health.py  test_install_script.py  test_manifest.py  test_native_app_source.py  test_release_distribution.py  test_safari_plists.py  test_transcription.py  test_update_controller_source.py  test_utils.py  test_webextension_source.py  test_workflow.py
tests/fixtures/: classic_section.json  cloud_syllabus.json
(+416 files in other folders)
